--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.7.3",
     "dayjs": "^1.11.12",
     "flag-icons": "^7.2.3",
+    "mapbox-gl": "^3.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-map-gl": "^7.1.7",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.0"
   },
